@startuml GameBot

' styling options
!include %dirpath()/../styles/class.iuml

' diagram imports
!includesub %dirpath()/GameEngine.puml!COMMON
!includesub %dirpath()/GameEngine.puml!GAME
!includesub %dirpath()/GameEngine.puml!IO

' class diagram (https://plantuml.com/class-diagram)
package bot {
    package game {
        class BotKnowledge {
            - playerId: int {readOnly}
            - knownForms: Map<Integer, Cell> {readOnly}
            - adjacency: Map<Cell, Map<Direction, Cell>> {readOnly}
            --
            + BotKnowledge(playerId: int)
            + observeEnvironment(currentCell: Cell, neighborCells: Cell[]): void
            + getForm(formId: int): Cell
            + getFinishCell(): Cell
            + nextDirectionTowards(start: Cell, target: Cell): Direction
            + nextDirectionToUnvisited(start: Cell): Direction
            + searchDisplacedForm(formId: int, expectedCell: Cell): Cell
            + updateFormPosition(formId: int, newCell: Cell): void
            - observeCell(cell: Cell): void
            - shortestPath(start: Cell, goal: Cell): List<Direction>
            - shortestPath(start: Cell,
            goalPredicate: Predicate<Cell>): List<Direction>
            - buildPath(start: Cell, goal: Cell,
            previous: Map<Cell, Cell>,
            directionTaken: Map<Cell, Direction>): List<Direction>
            + getPlayerId(): int
        }
        BotKnowledge --> "1" engine.game.cell.Cell : - finishCell: Cell

        class BotPlayer {
            + BotPlayer(params: PlayerParams, strategies: List<BotStrategy>,
            logger: GameLogger)
            + onTurnSuccess(action: Action, result: ActionResult): void
            + chooseNextAction(): Action {abstract}
            + getPath(): Stack<Cell>
            + getTurns(): Stack<Direction>
            + getKnowledge(): BotKnowledge
            + getLogger(): GameLogger
        }
        engine.game.player.Player <|-- BotPlayer
        BotPlayer --> "*" engine.game.cell.Cell : - path: Stack<Cell> {readOnly}
        BotPlayer --> "*" engine.common.Direction : - turns: Stack<Direction> {readOnly}
        BotPlayer o-- "*" bot.strategy.BotStrategy : - strategies: List<BotStrategy> {readOnly}
        BotPlayer *-- "1" BotKnowledge : - knowledge: BotKnowledge {readOnly}
        BotPlayer --> "1" engine.io.GameLogger : - logger: GameLogger {readOnly}

        class BotPlayerFactory {
            + BotPlayerFactory(strategyProvider: BotStrategyProvider, logger: GameLogger)
            + createPlayer(params: PlayerParams): BotPlayer
        }
        engine.game.player.PlayerFactory <|.. BotPlayerFactory
        BotPlayerFactory --> "1" BotStrategyProvider : - strategyProvider: BotStrategyProvider {readOnly}
        BotPlayerFactory --> "1" engine.io.GameLogger : - logger: GameLogger {readOnly}

        interface BotStrategyProvider <<interface>> {
            + getStrategies(level: int): List<BotStrategy>
        }
    }

    package strategy {
        interface BotStrategy <<interface>> {
            + suggestAction(player: BotPlayer): Action
        }

        class NavigationStrategy {
            + suggestAction(player: BotPlayer): Action
            - isCellFinishable(cell: Cell, playerId: int, formCount: int): boolean
            - isCellTakeable(cell: Cell, playerId: int, formCount: int): boolean
            + toString(): String
        }
        BotStrategy <|.. NavigationStrategy

        class SearchStrategy {
            {static} - MAX_SEARCH_DEPTH: int = 5 {readOnly}
            - targetFormId: int {readOnly}
            - searchAttempts: int
            --
            + SearchStrategy(targetFormId: int)
            + suggestAction(player: BotPlayer): Action
            + reset(): void
            - isTargetForm(cell: Cell, playerId: int): boolean
            + toString(): String
        }
        BotStrategy <|.. SearchStrategy

        class KickStrategy {
            + suggestAction(player: BotPlayer): Action
            - isValidKickDestination(targetCell: Cell): boolean
            - hasEnemyForm(cell: Cell, playerId: int): boolean
            + toString(): String
        }
        BotStrategy <|.. KickStrategy

        class AvoidanceStrategy {
            {static} - HISTORY_SIZE: int = 6 {readOnly}
            {static} - FORCE_THRESHOLD: int = 3 {readOnly}
            {static} - MAX_FORCE_STEPS: int = 5 {readOnly}
            {static} - ESCAPE_STEPS: int = 2 {readOnly}
            - blockedCounts: Map<Position, Integer> {readOnly}
            - positionHistory: Deque<Position> {readOnly}
            - forcingMode: boolean
            - forcingSteps: int
            - escapeSteps: int
            --
            + suggestAction(player: BotPlayer): Action
            - updatePositionHistory(position: Position): void
            - handlePingPongEscape(currentDirection: Direction,
            leftCell: Cell, rightCell: Cell): Action
            - continueEscapeIfActive(op: Function<Direction, Cell>): Action
            - findEnemyDirection(op: Function<Direction, Cell>): Direction
            - handleEnemyEncounter(currentPosition: Position,
            currentDirection: Direction, enemyDirection: Direction,
            leftCell: Cell, rightCell: Cell): Action
            - handleForcingMode(currentPosition: Position, enemyDirection: Direction): Action
            - resetForcingMode(currentPosition: Position): void
            - resetEscape(): void
            - trySideStep(currentDirection: Direction,
            leftCell: Cell, rightCell: Cell): Action
            - findViableDirection(leftCell: Cell, left: Direction,
            rightCell: Cell, right: Direction): Direction
            - isViableUnvisited(cell: Cell): boolean
            - isPingPongPattern(): boolean
            - tryEscape(currentDirection: Direction, leftCell: Cell, rightCell: Cell): Action
            - selectEscapeDirection(leftCell: Cell, left: Direction,
            rightCell: Cell, right: Direction): Direction
            - isViable(cell: Cell): boolean
            + toString(): String
        }
        BotStrategy <|.. AvoidanceStrategy
        AvoidanceStrategy --> "1" engine.common.Direction : - escapeDirection: Direction

        class ExplorationStrategy {
            + suggestAction(player: BotPlayer): Action
            + toString(): String
        }
        BotStrategy <|.. ExplorationStrategy

        class BacktrackStrategy {
            + suggestAction(player: BotPlayer): Action
            + toString(): String
        }
        BotStrategy <|.. BacktrackStrategy

        class FallbackStrategy {
            + suggestAction(player: BotPlayer): Action
            + toString(): String
        }
        BotStrategy <|.. FallbackStrategy
    }
}

@enduml
